--- a/app/src/main/res/layout/daily_content_fragment.xml
+++ b/app/src/main/res/layout/daily_content_fragment.xml
@@ -11,13 +11,16 @@
 
         <TextView
             android:id="@+id/intro_programs_txt"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:fontFamily="@font/crimson_text_bold"
+            android:maxLines="1"
             android:text="Intro Free Unlock Genius"
             android:textColor="@color/black"
             android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <!--"@+id/videoView_layout" -->
@@ -191,7 +194,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:ellipsize="end"
             android:fontFamily="@font/crimson_text_bold"
+            android:maxLines="1"
             android:text="Intro Free Unlock Genius"
             android:textColor="@color/black"
             android:textSize="16sp"
@@ -205,8 +210,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:paddingBottom="4dp"
             android:fontFamily="@font/crimson_text_bold"
+            android:paddingBottom="4dp"
             android:text="Important Activity"
             android:textColor="@color/darkBlue"
             android:textSize="14sp"
@@ -216,7 +221,7 @@
             app:layout_constraintTop_toBottomOf="@id/video_name" />
 
 
-        <androidx.recyclerview.widget.RecyclerView
+        <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/suggest_content_recycle_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -227,7 +232,36 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/suggestion_txt"
-            tools:listitem="@layout/daily_content_suggestion_item_layout" />
+            tools:listitem="@layout/daily_content_suggestion_item_layout" />-->
+
+
+        <include
+            android:id="@+id/first_video_set"
+            layout="@layout/daily_content_suggestion_item_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/suggestion_txt" />
+
+
+        <com.google.android.material.button.MaterialButton
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:backgroundTint="@color/activeBlue"
+            android:elevation="10dp"
+            android:fontFamily="@font/crimson_text_bold"
+            android:text="View Playlist"
+            android:textAllCaps="false"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/first_video_set"
+            app:rippleColor="#1AA6C5"
+            app:strokeColor="@color/darkBlue"
+            app:strokeWidth="2dp" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
