--- a/app/src/main/res/layout/bottom_sheet_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_layout.xml
@@ -4,59 +4,72 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.uptodd.uptoddapp.utils.dialog.bottom_sheet.DemoBottomSheet">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bottom_sheet_bg"
-        android:minHeight="250dp">
+        android:layout_height="match_parent">
 
-
-        <TextView
-            android:id="@+id/bottom_sheet_txt"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:drawableTop="@drawable/ic_keyboard_arrow_down"
-            android:drawableTint="@color/light_grey_color"
-            android:gravity="center"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:paddingBottom="10dp"
-            android:textColor="@color/black"
-            android:textSize="17sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="?attr/actionBarSize"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:backgroundTint="@android:color/transparent"
+            android:minHeight="?attr/actionBarSize">
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/resume_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/button_bg_horizontal_gradient"
-            android:minWidth="150dp"
-            android:paddingStart="18dp"
-            android:paddingEnd="18dp"
-            android:text="Resume"
-            android:textAllCaps="false"
-            android:textColor="@color/white"
-            app:layout_constraintLeft_toLeftOf="@id/bottom_sheet_txt"
-            app:layout_constraintRight_toRightOf="@id/bottom_sheet_txt"
-            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_txt" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/bottom_sheet_bg"
+                android:orientation="horizontal">
 
 
-        <TextView
-            android:id="@+id/skip_txt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:padding="10dp"
-            android:text="@string/skip_btn"
-            android:textColor="@color/activeBlue"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/resume_btn"
-            app:layout_constraintRight_toRightOf="@id/resume_btn"
-            app:layout_constraintTop_toBottomOf="@id/resume_btn" />
+                <TextView
+                    android:id="@+id/nameToolbar"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/crimson_text_bold"
+                    android:text="Intro to Parenting Program"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textStyle="bold"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                    android:textColor="@color/black"
+                    android:textSize="17sp"
+                    tools:text="Name" />
+
+                <ImageButton
+                    android:id="@+id/cancelBtn"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_gravity="center"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:contentDescription="Cancel"
+                    android:src="@drawable/ic_outline_cancel"
+                    android:tint="#838383" />
+            </LinearLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/view_video_content_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/appBarLayout"
+            android:layout_alignLeft="@id/appBarLayout"
+            android:layout_alignRight="@id/appBarLayout"
+            android:layout_alignParentBottom="true"
+            android:background="@color/white"
+            android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/daily_content_suggestion_item_layout" />
+
+
+    </RelativeLayout>
 </layout>
