--- a/app/src/main/res/layout/daily_content_suggestion_item_layout.xml
+++ b/app/src/main/res/layout/daily_content_suggestion_item_layout.xml
@@ -53,17 +53,19 @@
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="true"
                 android:singleLine="true"
+                android:drawableTint="#838383"
+                android:drawableEnd="@drawable/ic_arrow_forward_white_24dp"
                 android:textColor="@color/black"
                 android:textSize="14sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintLeft_toRightOf="@id/video_thumbnail"
-                app:layout_constraintRight_toLeftOf="@id/go_to_btn"
+                app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Hello ji how are u the fdjkl klgflkhflk hjghklf jhgfhklfg jhgfhkl hfkghklf" />
 
 
-            <ImageButton
+            <!--<ImageButton
                 android:id="@+id/go_to_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -77,7 +79,7 @@
                 app:layout_constraintHorizontal_bias=".99"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent" />-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
