--- a/app/src/main/res/layout/activity_full_webinar.xml
+++ b/app/src/main/res/layout/activity_full_webinar.xml
@@ -75,14 +75,14 @@
                 android:layout_gravity="center" />
         </com.google.android.exoplayer2.ui.SimpleExoPlayerView>-->
 
-        <com.google.android.youtube.player.YouTubePlayerView
+      <!--  <com.google.android.youtube.player.YouTubePlayerView
             android:id="@+id/videoView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"/>-->
 
         <ScrollView
             android:layout_width="match_parent"
