--- a/app/src/main/res/layout/daily_book_layout.xml
+++ b/app/src/main/res/layout/daily_book_layout.xml
@@ -41,12 +41,12 @@
                         android:layout_marginStart="3dp"
                         android:layout_marginTop="10dp"
                         android:layout_marginEnd="3dp"
-                        app:tabIndicatorHeight="48dp"
-                        app:tabRippleColor="#c2e7ff"
-                        app:tabIndicatorFullWidth="true"
                         app:tabIndicator="@drawable/tab_bg_selected"
                         app:tabIndicatorColor="#1AA6C5"
+                        app:tabIndicatorFullWidth="true"
+                        app:tabIndicatorHeight="48dp"
                         app:tabMode="scrollable"
+                        app:tabRippleColor="#c2e7ff"
                         app:tabSelectedTextColor="@color/white"
                         app:tabTextAppearance="@style/customTabLayout"
                         app:tabTextColor="@color/darkBlue" />
@@ -58,6 +58,25 @@
                         android:layout_height="wrap_content" />
                 </LinearLayout>
             </androidx.core.widget.NestedScrollView>
+
+
+            <ProgressBar
+                android:id="@+id/progress_for_tab_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="80dp"
+                android:visibility="gone" />
+
+
+            <ProgressBar
+                android:id="@+id/progress_for_video_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone" />
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
