--- a/app/src/main/res/layout/purchase_plan_tabs_fragments.xml
+++ b/app/src/main/res/layout/purchase_plan_tabs_fragments.xml
@@ -10,12 +10,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cancel_icon_view_click"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_margin="15dp"
             app:cardBackgroundColor="#f5f5f5"
             app:cardCornerRadius="360dp"
-            app:cardElevation="14dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -23,6 +22,7 @@
                 android:id="@+id/back_icon_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:padding="3dp"
                 android:background="?attr/selectableItemBackground"
                 android:clickable="true"
                 android:focusable="true"
