--- a/app/src/main/res/layout/purchase_plan_tabs_fragments.xml
+++ b/app/src/main/res/layout/purchase_plan_tabs_fragments.xml
@@ -8,40 +8,99 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/cancel_icon_view_click"
-            android:layout_width="wrap_content"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/course_muilt_display"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            app:cardBackgroundColor="#f5f5f5"
-            app:cardCornerRadius="360dp"
+            android:background="#f2f4f7"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/back_icon_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="3dp"
-                android:background="?attr/selectableItemBackground"
-                android:clickable="true"
-                android:focusable="true"
-                android:src="@drawable/ic_cancel"
-                android:tint="#8a8a8a"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cancel_icon_view_click"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="15dp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="360dp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
 
-        </androidx.cardview.widget.CardView>
+                <androidx.appcompat.widget.AppCompatImageButton
+                    android:id="@+id/back_icon_image"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="3dp"
+                    android:src="@drawable/ic_cancel"
+                    android:tint="@color/black"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/course_icon_image"
+            </androidx.cardview.widget.CardView>
+
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabs"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintBottom_toBottomOf="@id/cancel_icon_view_click"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="@id/cancel_icon_view_click"
+                app:tabBackground="@drawable/tab_layout"
+                app:tabIndicatorColor="@android:color/transparent"
+                app:tabIndicatorHeight="0dp"
+                app:tabRippleColor="@android:color/transparent" />
+
+
+            <TextView
+                android:id="@+id/course_content"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginEnd="15dp"
+                android:ellipsize="end"
+                android:fontFamily="@font/montserrat"
+                android:maxLines="1"
+                android:text="Content"
+                android:textColor="@color/black"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@id/cancel_icon_view_click"
+                app:layout_constraintLeft_toRightOf="@id/cancel_icon_view_click"
+                app:layout_constraintRight_toLeftOf="@id/tab_item_for_intro_screen"
+                app:layout_constraintTop_toTopOf="@id/cancel_icon_view_click" />
+
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/view_pager_for_course"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#f2f4f7"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tabs" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <!--<ImageView
+            android:id="@+id/course_muilt_display"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:scaleType="fitXY"
             android:src="@drawable/default_set_default_blog"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
         <TextView
             android:id="@+id/upgrade_course_txt"
@@ -55,9 +114,9 @@
             android:textFontWeight="800"
             android:textSize="20sp"
             app:layout_constraintHorizontal_bias=".4"
-            app:layout_constraintLeft_toLeftOf="@id/course_icon_image"
-            app:layout_constraintRight_toRightOf="@id/course_icon_image"
-            app:layout_constraintTop_toBottomOf="@id/course_icon_image" />
+            app:layout_constraintLeft_toLeftOf="@id/course_muilt_display"
+            app:layout_constraintRight_toRightOf="@id/course_muilt_display"
+            app:layout_constraintTop_toBottomOf="@id/course_muilt_display" />
 
 
         <TextView
@@ -80,7 +139,7 @@
             app:layout_constraintBottom_toBottomOf="@id/upgrade_course_txt"
             app:layout_constraintHorizontal_bias="0.15"
             app:layout_constraintLeft_toRightOf="@id/upgrade_course_txt"
-            app:layout_constraintRight_toRightOf="@id/course_icon_image"
+            app:layout_constraintRight_toRightOf="@id/course_muilt_display"
             app:layout_constraintTop_toTopOf="@id/upgrade_course_txt" />
 
 
@@ -104,7 +163,6 @@
         <com.google.android.material.button.MaterialButton
             android:id="@+id/buy_btn"
             android:layout_width="0dp"
-            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -119,6 +177,7 @@
             android:textColor="@color/white"
             android:textSize="13sp"
             android:textStyle="bold"
+            android:visibility="gone"
             app:cornerRadius="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
