--- a/app/src/main/res/layout/profile_layout_fragment.xml
+++ b/app/src/main/res/layout/profile_layout_fragment.xml
@@ -24,8 +24,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginStart="5dp"
                 android:layout_marginEnd="5dp"
-                android:background="#fefffe"
                 android:layout_marginBottom="5dp"
+                android:background="#fefffe"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
@@ -35,7 +35,39 @@
                     android:background="#fefffe"
                     android:padding="10dp">
 
-                    <ImageView
+
+                    <androidx.cardview.widget.CardView
+                        android:id="@+id/user_profile_pic"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_margin="15dp"
+                        app:cardBackgroundColor="@color/gradientCarouselIndicatorStartColor"
+                        app:cardCornerRadius="360dp"
+                        app:cardElevation="14dp"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <TextView
+                            android:id="@+id/user_profile_txt"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="?attr/selectableItemBackground"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:fontFamily="@font/montserrat"
+                            android:text="A"
+                            android:gravity="center_vertical|center"
+                            android:textColor="@color/white"
+                            android:textSize="50sp"
+                            android:textStyle="bold"
+                            app:layout_constraintLeft_toLeftOf="parent"
+                            app:layout_constraintTop_toTopOf="parent" />
+
+                    </androidx.cardview.widget.CardView>
+
+
+                    <!--<ImageView
                         android:id="@+id/user_profile_pic"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -43,7 +75,7 @@
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        android:src="@drawable/samplebaby" />
+                        android:src="@drawable/samplebaby" />-->
 
 
                     <TextView
@@ -52,21 +84,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp"
                         android:fontFamily="@font/montserrat"
+                        android:text="testing image"
                         android:textColor="#595958"
                         android:textSize="17sp"
                         android:textStyle="bold"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/user_profile_pic"
-                        android:text="testing image" />
+                        app:layout_constraintTop_toBottomOf="@id/user_profile_pic" />
 
 
                     <TextView
                         android:id="@+id/user_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
                         android:layout_marginStart="10dp"
+                        android:layout_marginTop="20dp"
                         android:fontFamily="@font/crimson_text_bold"
                         android:text="Name"
                         android:textColor="#595958"
