--- a/app/src/main/res/layout/profile_layout_fragment.xml
+++ b/app/src/main/res/layout/profile_layout_fragment.xml
@@ -167,7 +167,7 @@
                         app:boxCornerRadiusTopEnd="4dp"
                         app:boxCornerRadiusTopStart="4dp"
                         app:boxStrokeColor="@color/activeBlue"
-                        app:endIconMode="clear_text"
+                        app:endIconMode="none"
                         app:endIconTint="@color/black"
                         app:layout_constraintLeft_toLeftOf="@id/user_email"
                         app:layout_constraintRight_toRightOf="@id/user_email"
@@ -234,9 +234,8 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom"
                         android:layout_marginStart="20dp"
-                        android:layout_marginTop="100dp"
+                        android:layout_marginTop="50dp"
                         android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="20dp"
                         android:elevation="5dp"
                         android:fontFamily="@font/montserrat"
                         android:paddingTop="13dp"
@@ -247,6 +246,7 @@
                         android:textSize="13sp"
                         android:textStyle="bold"
                         app:backgroundTint="@color/gradientCarouselIndicatorStartColor"
+                        app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toBottomOf="@id/user_phone_ed_layout"
@@ -254,6 +254,18 @@
                         app:strokeColor="@color/gradientCarouselIndicatorStartColor"
                         app:strokeWidth="1dp" />
 
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:id="@+id/pb_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center"
+                        android:indeterminate="true"
+                        android:visibility="visible"
+                        app:indicatorColor="@color/darkBlue"
+                        app:layout_constraintBottom_toBottomOf="@id/update_info_btn"
+                        app:layout_constraintLeft_toLeftOf="@id/update_info_btn"
+                        app:layout_constraintRight_toRightOf="@id/update_info_btn"
+                        app:layout_constraintTop_toTopOf="@id/update_info_btn" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
             </androidx.core.widget.NestedScrollView>
